--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~3.2.3",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@reduxjs/toolkit": "^2.5.0",
     "expo": "~51.0.39",
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
@@ -24,8 +25,9 @@
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "3.10.1",
     "react-native-safe-area-context": "4.10.5",
+    "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
-    "react-native-svg": "15.2.0"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
