--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
+    "postinstall": "node scripts/postinstall.js",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -12,18 +13,23 @@
     "@expo/metro-runtime": "~3.2.3",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/stack": "^7.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "expo": "~51.0.39",
+    "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
-    "firebase": "^10.12.4",
+    "firebase": "^11.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-dots-pagination": "^0.3.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "1.14.0",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "3.10.1",
+    "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-reanimated-skeleton": "^1.5.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
