--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "1.14.0",
     "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "3.10.1",
-    "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated-carousel": "4.0.2",
     "react-native-reanimated-skeleton": "^1.5.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-svg": "15.2.0",
