--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-dots-pagination": "^0.3.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "1.14.0",
     "react-native-paper": "^5.13.1",
@@ -33,7 +32,8 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "expo-dev-client": "~4.0.29"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
