--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "postinstall": "node scripts/postinstall.js",
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^7.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "expo": "~51.0.39",
+    "expo-dev-client": "~4.0.29",
     "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
@@ -33,7 +34,8 @@
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.2.0",
-    "expo-dev-client": "~4.0.29"
+    "expo-splash-screen": "~0.27.7",
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
