--- a/package.json
+++ b/package.json
@@ -13,29 +13,33 @@
     "@expo/metro-runtime": "~3.2.3",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/stack": "^7.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "expo": "~51.0.39",
     "expo-dev-client": "~4.0.29",
     "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
+    "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.28",
     "firebase": "^11.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "1.14.0",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-maps-routes": "^1.2.1",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "4.0.2",
     "react-native-reanimated-skeleton": "^1.5.1",
     "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "^4.11.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.2.0",
-    "expo-splash-screen": "~0.27.7",
-    "react-native-screens": "3.31.1"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
